--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -19,6 +19,7 @@ header{
     svg{
       height: 1rem;
     }
+    color: black;
   }
 
   .nav-and-button-wrapper{
